--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ user.username }} ({{ posts.total }})</h1>
-    {% for post in posts %}
-            <h2><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
-            <p>{{ post.content }}</p>
-    {% endfor %}
+
     {% if not current_user.is_following(user) %}
             <p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
     {% else %}
             <p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
     {% endif %}
+
+    <h1 class="mb-3">Posts by {{ user.username }} </h1>
+    {% for post in posts %}
+            <h2><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+            <p>{{ post.content }}</p>
+    {% endfor %}
+
+
 {% endblock content %}
