--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,8 @@
 {% block content %}
     <div>
         {% for post in posts %}
-            <h1>{{ post.title }}</h1>
+            <a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a>
+            <br>
             <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
             <br>
             <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
