--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ user.username }} ({{ posts.total }})</h1>
+    <h1 class="mb-3">Posts by {{ user.username }} </h1>
     {% for post in posts %}
             <h2><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+            <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
             <p>{{ post.content }}</p>
     {% endfor %}
+
     {% if not current_user.is_following(user) %}
             <p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
     {% else %}
