--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,10 +3,14 @@
 {% block content %}
     <div>
         {% for post in posts %}
-            <a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a>
-            <br>
+
+            <img src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
             <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
             <br>
+
+            <a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a>
+            <br>
+
             <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
             <p>{{ post.content }}</p>
             <hr>
