--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -9,15 +9,12 @@
             </form>
           </div>
         {% else %}
-          <div>
-            <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
-                <input class="btn btn-danger" type="submit" value="Delete">
-            </form>
-          </div>
+
         {% endif %}
     </div>
 
     <h2 class="article-title">{{ post.title }}</h2>
+    <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
     <p class="article-content">{{ post.content }}</p>
 
     <div class="border-top pt-3">
@@ -26,14 +23,18 @@
         </small>
     </div>
 
+    <hr>
+
     {% if post.comments %}
         {% if post.comments.count() > 0 %}
             <h2>Comments</h2>
-            <p>
                 {% for comment in post.comments %}
-                    <p>{{ comment.body }}</p>
+                    <p>{{ comment.author }}</p>
+                    <br>
+                    <p>{{ comment.content }}</p>
+                    <hr>
                 {% endfor %}
-            </p>
         {% endif %}
     {% endif %}
+
 {% endblock content %}
