--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,15 +1,12 @@
 .nav-item {
-  border: 2px solid white;
-  border-radius: 25px;
-  color: white;
-}
+       border: 2px solid white;
+       border-radius: 25px;
+       color: white;
+    }
 
-body {
-  background-color: white;
-}
-
-.navbar-nav {
-  text-align: end;
+body
+{
+   background-color: white;
 }
 
 .nav-item {
