--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,39 +1,19 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
 
-<link
-  rel="stylesheet"
-  text="type/css"
-  href="{{url_for ('static', filename='home.css')}}"
-/>
-<div class="maindiv">
-  {% for post in posts %}
+{% block content %}
+    <div>
+        {% for post in posts %}
 
-  <div>
-    <img
-      src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}"
-      style="width: 50px; height: 50px; border-radius: 50px;"
-    />
-    <a
-      class="mr-2"
-      href="{{ url_for('user_posts', username=post.author.username) }}"
-      >{{ post.author.username }}</a
-    >
-  </div>
-  <div class="posts">
-    <br />
+            <img src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+            <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+            <br>
 
-    <a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }} </a>
-    <br />
+            <a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a>
+            <br>
 
-    <img
-      src="{{ url_for('static', filename='posts/' + post.post_image) }}"
-      style="width: 400px; height: 400px;"
-    />
-    <br />
-    <a class="mr-2" style="font-weight: bold;">{{ post.author.username }}</a>
-    {{ post.content }}
-    <hr />
-  </div>
-  {% endfor %}
-</div>
+            <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
+            <p>{{ post.content }}</p>
+            <hr>
+        {% endfor %}
+    </div>
 {% endblock content%}
