--- a/app/static/main.css
+++ b/app/static/main.css
@@ -63,6 +63,23 @@ body {
     display: inline-block;
     font-size: 16px;
 
+ }
 
+ .content-section {
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   width: 400px;
+ }
 
+ .form-group {
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   width: 400px;
+ }
+ .post-view {
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
  }
