--- a/app/templates/create_post.html
+++ b/app/templates/create_post.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<link rel="stylesheet" text="type/css" href="{{url_for ('static', filename='main.css')}}">
 <div>
     <form method="POST" action="" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
@@ -45,7 +46,7 @@
                 </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
 {% endblock content%}
