--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -1,20 +1,22 @@
 {% extends "base.html" %} {% block content %}
+<link rel="stylesheet" text="type/css" href="{{url_for ('static', filename='main.css')}}"/>
+<div class="post-view">
+  <img
+    src="{{ url_for('static', filename='profile_pics/' + user.image_file) }}"
+  />
+  <p>Posts by {{ user.username }}</p>
 
-<img
-  src="{{ url_for('static', filename='profile_pics/' + user.image_file) }}"
-/>
-<p>Posts by {{ user.username }}</p>
-
-{% if not current_user.is_following(user) %}
-<p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
-{% else %}
-<p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
-{% endif %}
+  {% if not current_user.is_following(user) %}
+  <p><strong><a href="{{ url_for('follow', username=user.username) }}">Follow</a></strong></p>
+  {% else %}
+  <p><strong><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></strong></p>
+  {% endif %}
 
     <hr>
     {% for post in posts %}
-            <h2><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+            <h2><strong><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></strong></h2>
             <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
             <p>{{ post.content }}</p>
-    {% endfor %}
-{% endblock content %}
+     {% endfor %}
+  {% endblock content %}
+</div>
