--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -3,18 +3,23 @@
 <img
   src="{{ url_for('static', filename='profile_pics/' + user.image_file) }}"
 />
+
 <p>Posts by {{ user.username }}</p>
 
-{% if not current_user.is_following(user) %}
-<p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
-{% else %}
-<p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
-{% endif %}
+    {% if not current_user == user %}
+        {% if not current_user.is_following(user) %}
+            <p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
+        {% else %}
+            <p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
+        {% endif %}
+    {% endif %}
 
     <hr>
+    
     {% for post in posts %}
             <h2><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
             <img src="{{ url_for('static', filename='posts/' + post.post_image) }}" style="width:600px;height:400px;">
             <p>{{ post.content }}</p>
     {% endfor %}
+
 {% endblock content %}
