--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,6 +53,14 @@
                 >Account</a
               >
             </li>
+                <li class="nav-item">
+              <a
+                class="nav-link"
+                href="{{ url_for('search') }}"
+                style="color: white;"
+                >Search</a
+              >
+            </li>
             <li>
               <a
                 class="nav-link"
