--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,8 +16,7 @@
     <a
       class="mr-2"
       href="{{ url_for('user_posts', username=post.author.username) }}"
-      >{{ post.author.username }}</a
-    >
+      >{{ post.author.username }}</a>
   </div>
   <div class="posts">
     <br />
