--- a/app/static/main.css
+++ b/app/static/main.css
@@ -70,16 +70,10 @@ body {
    margin-left: auto;
    margin-right: auto;
    width: 400px;
+   background-color: lightgray;
+   padding: 50px; 
  }
 
- .form-group {
-   text-align: center;
-   margin-left: auto;
-   margin-right: auto;
-   width: 400px;
- }
- .post-view {
-   text-align: center;
-   margin-left: auto;
-   margin-right: auto;
+ img{
+   border-radius: 25px;
  }
